[package]
name = "rust-mock-mry"
version = "0.1.0"
authors = ["a-higa <ahigachika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
mockall = "0.10.0"
cfg-if = "1.0"
mry = "0.1.3"

[dev-dependencies]
mockall = "0.10.0"